# translator

./: .gitignore  clean_text.py  pyproject.toml  translate.py
